SONAR-9715 Implement a delay for finishing task in Compute Engine